# latency-benchmark

./: .gitignore  .gitmodules  pre_build.bat  pre_build.sh
c/: CMakeLists.txt
c/benchmark/atomic_int_op/: benchmark_atomic_int_op.c
c/benchmark/format/: benchmark_format.c
c/benchmark/int_op/: benchmark_int_op.c
c/benchmark/malloc_free/: benchmark_malloc_free.c
c/benchmark/modulo/: benchmark_modulo.c
c/benchmark/pipe/: benchmark_pipe.c
c/benchmark/socketpair/: benchmark_socketpair.c
c/benchmark/time/: benchmark_time.c
c/cmake/: mugglec.cmake.in
c/gbenchmark/c_write_va_to_file/: c_write_va_to_file.cpp
c/gbenchmark/muggle_futex/: muggle_futex.cpp
c/gbenchmark/muggle_ma_ring/: muggle_ma_ring.cpp
c/gbenchmark/muggle_mutex/: muggle_mutex.cpp
c/gbenchmark/muggle_spin_lock/: muggle_spin_lock.cpp
c/gbenchmark/muggle_sync/: muggle_sync.cpp
c/gbenchmark/muggle_thread_trans_write/: muggle_thread_trans_write.cpp
config/: benchmark_conf.json  thread_trans_conf.json  ws_conf.json
cpp/: CMakeLists.txt  build.bat  build.sh  readme.md
cpp/benchmark/muggle_atomic/: muggle_atomic.cpp
cpp/benchmark/muggle_futex/: muggle_futex.cpp
cpp/benchmark/std_atomic/: benchmark_std_atomic.cpp  std_atomic.cpp
cpp/benchmark/std_atomic_int_op/: std_atomic_int_op.cpp
cpp/benchmark/std_mutex/: std_mutex.cpp
cpp/cmake/: benchmark.cmake.in
cpp/deprecated/benchmark/c_malloc_free/: benchmark_c_malloc_free.cpp
cpp/deprecated/benchmark_common/: benchmark_config.cpp  benchmark_config.h
cpp/deprecated/cmake/: benchmark.cmake.in  mugglec.cmake.in  mugglecpp.cmake.in
cpp/deprecated/latency_common/: thread_trans_config.cpp  thread_trans_config.h  thread_trans_reports.h  ws_reports.h
cpp/deprecated/loop_increment/: loop_increment.cpp
cpp/deprecated/ws_trans/ws_trans_client/: ws_trans_client.cpp
cpp/deprecated/ws_trans/ws_trans_handle/: ws_handle.cpp
cpp/deprecated/ws_trans/ws_trans_server/: ws_trans_server.cpp
cpp/gbenchmark/log_libs/: CMakeLists.txt
cpp/gbenchmark/log_libs/haclog_basic/: haclog_basic.cpp
cpp/gbenchmark/log_libs/log_msg/: log_msg.cpp  log_msg.h
cpp/gbenchmark/log_libs/mugglec_log_async/: mugglec_log_async.cpp
cpp/gbenchmark/log_libs/mugglec_log_sync/: mugglec_log_sync.cpp
cpp/gbenchmark/log_libs/nanolog_basic/: nanolog_basic.cpp
cpp/gbenchmark/log_libs/pprof/: pprof.sh
cpp/gbenchmark/log_libs/pprof/haclog_basic/: haclog_basic.cpp
cpp/gbenchmark/log_libs/pprof/mugglec_log_sync/: mugglec_log_sync.cpp
cpp/gbenchmark/log_libs/pprof/nanolog_basic/: nanolog_basic.cpp
cpp/gbenchmark/log_libs/pprof/spdlog_basic/: spdlog_basic.cpp
cpp/gbenchmark/log_libs/spdlog_async/: spdlog_async.cpp
cpp/gbenchmark/log_libs/spdlog_basic/: spdlog_basic.cpp
cpp/gbenchmark/log_libs/spdlog_sync/: spdlog_sync.cpp
cpp/gbenchmark/std/: CMakeLists.txt
cpp/gbenchmark/std_atomic/: std_atomic.cpp
cpp/gbenchmark/strcpy/: strcpy.cpp
cpp/gbenchmark/time_elapsed_measure/: time_elapsed_measure.cpp
cpp/src/benchmark/c_malloc_free/: benchmark_c_malloc_free.cpp
cpp/src/benchmark/time/: benchmark_time.cpp
cpp/src/latency_common/: message.h  thread_trans_config.cpp  thread_trans_config.h  thread_trans_reports.cpp  ws_config.cpp  ws_config.h  ws_reports.cpp
cpp/src/loop_increment/: loop_increment.cpp  loop_increment.sh
cpp/src/thread_trans/thread_trans_ringbuffer/: thread_trans_ringbuffer.cpp
cpp/src/thread_trans/thread_trans_tunnel/: thread_trans_tunnel.cpp
cpp/src/ws_trans/ws_trans_client/: ws_trans_client.cpp
cpp/src/ws_trans/ws_trans_handle/: ws_handle.cpp  ws_handle.h
cpp/src/ws_trans/ws_trans_server/: ws_server_handler.h  ws_service.cpp  ws_service.h  ws_trans_server.cpp
golang/latency_common/: message.go  thread_trans_config.go  thread_trans_report.go  ws_config.go  ws_report.go
golang/thread_trans/thread_trans_channel/: main.go
golang/ws_trans/ws_trans_client/: main.go
golang/ws_trans/ws_trans_client_golang/: main.go
golang/ws_trans/ws_trans_server/: ws_service.go
golang/ws_trans/ws_trans_server_golang/: main.go  ws_service.go
java/LatencyBenchmark/: pom.xml  run.bat  run.sh
java/LatencyBenchmark/LatencyBenchmarkArrayBlockingQueue/: pom.xml
java/LatencyBenchmark/LatencyBenchmarkArrayBlockingQueue/src/main/java/: Consumer.java  LatencyBenchmarkArrayBlockingQueue.java  Message.java  Producer.java
java/LatencyBenchmark/LatencyBenchmarkArrayBlockingQueue/src/main/java/com/muggle/LatencyBenchmark/: LatencyBenchmarkArrayBlockingQueue.java
java/LatencyBenchmark/LatencyBenchmarkArrayBlockingQueue/src/main/java/com/muggle/LatencyBenchmark/ArrayBlockingQueue/: Consumer.java  LatencyBenchmarkArrayBlockingQueue.java  Message.java  Producer.java
java/LatencyBenchmark/LatencyBenchmarkCommon/: pom.xml
java/LatencyBenchmark/LatencyBenchmarkCommon/src/main/java/: LatencyBenchmarkCommon.java  LatencyBenchmarkConfig.java  TimestampRecord.java
java/LatencyBenchmark/LatencyBenchmarkCommon/src/main/java/com/muggle/latencybenchmark/: LatencyBenchmarkConfig.java  LatencyBenchmarkHandle.java  LatencyBenchmarkRecord.java  LatencyBenchmarkThreadTrans.java  LatencyBenchmarkThreadTransConsumer.java  LatencyBenchmarkThreadTransMessage.java  LatencyBenchmarkThreadTransProducer.java
java/LatencyBenchmark/LatencyBenchmarkCommon/src/main/java/com/muggle/latencybenchmark/common/: LatencyBenchmarkCommon.java  LatencyBenchmarkConfig.java  LatencyBenchmarkHandle.java  LatencyBenchmarkRecord.java  LatencyBenchmarkThreadTrans.java  LatencyBenchmarkThreadTransConsumer.java  LatencyBenchmarkThreadTransMessage.java  LatencyBenchmarkThreadTransProducer.java  TimestampRecord.java
java/LatencyBenchmark/LatencyBenchmarkDisruptor/: pom.xml
java/LatencyBenchmark/LatencyBenchmarkDisruptor/src/main/java/com/muggle/latencybenchmark/: LatencyBenchmarkDisruptor.java
java/LatencyBenchmark/src/main/java/com/muggle/: BenchmarkArrayBlockingQueue.java
